@@ -3,14 +3,14 @@
 # generate the file "configure", which is run during Tk installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.40 2002/01/11 20:56:38 mdejong Exp $
+# RCS: @(#) $Id: configure.in,v 1.41 2002/03/06 15:36:17 dkf Exp $
 
 AC_INIT(../generic/tk.h)
 
 TK_VERSION=8.4
 TK_MAJOR_VERSION=8
 TK_MINOR_VERSION=4
-TK_PATCH_LEVEL="a4"
+TK_PATCH_LEVEL="a5"
 VER=$TK_MAJOR_VERSION$TK_MINOR_VERSION
 
 #------------------------------------------------------------------------
